--- a/source/index.html
+++ b/source/index.html
@@ -1,14 +1,168 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
-  <head>
-    <meta charset="UTF-8">
-    <title>Название проекта</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="styles/styles.css">
-    <script src="scripts/index.js" defer></script>
-  </head>
-  <body class="page__body">
-    <header class="header">Шапка</header>
-    <p>Привет!</p>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <title>Название проекта</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="styles/styles.css">
+  <script src="scripts/index.js" defer></script>
+</head>
+
+<body class="page__body">
+  <header class="main-header">
+    <div class="main-header__wrapper">
+      <a class="main-header__logo logo" href="#">
+        <span class="visually-hidden">Логотип Cat Energy</span>
+        <img class="main-header__logo-image logo__image" src="img/logotype-img.svg" width="33" height="38" alt="Графический логотип Cat Energy">
+        <img class="main-header__logo-text logo__text" src="img/logotype-text.svg" width="101" height="18" alt="Текстовый логотип Cat Energy">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list">
+            <li class="main-nav__item">
+              <a class="main-nav__link main-nav__link--active" href="#">Главная</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="#">Подбор программы</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </header>
+
+  <main class="main-container">
+    <h1 class="visually-hidden">Cat Energy - функциональное питание для котов</h1>
+    <section class="main-banner">
+      <div class="main-banner__wrapper">
+        <h2 class="main-banner__title">Функциональное питание для котов</h2>
+        <p class="main-banner__text">Занялись собой? Займитесь котом!</p>
+        <img class="main-banner__img" src="images/index-can.svg" width="280" height="270" alt="Серия Cat Energy Pro">
+        <a class="main-banner__button button button--green" href="select-program.html" type="button">Подобрать программу</a>
+      </div>
+    </section>
+
+    <section class="programs">
+      <div class="programs__wrapper">
+        <h2 class="visually-hidden">Программы питания</h2>
+        <ul class="programs__list">
+          <li class="programs__item programs__item--slim">
+            <h3 class="programs__item-title">Похудение</h3>
+            <p class="programs__item-text">
+              Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+            </p>
+            <a class="programs__button button button--transparent" href="catalog-slim.html">Каталог SLIM</a>
+          </li>
+          <li class="programs__item programs__item--pro">
+            <h3 class="programs__item-title">Набор массы</h3>
+            <p class="programs__item-text">
+              Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+            </p>
+            <a class="programs__button button button--transparent" href="catalog-pro.html">Каталог PRO</a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="how-it-works">
+      <div class="how-it-works__wrapper">
+        <h2 class="how-it-works__title">Как это работает</h2>
+        <ul class="how-it-works__list">
+          <li class="how-it-works__item how-it-works__item--nutrients">Функциональное питание содержит только полезные питательные вещества.</li>
+          <li class="how-it-works__item how-it-works__item--substance">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
+          <li class="how-it-works__item how-it-works__item--exchange">Замените один-два приема обычной еды на наше функциональное питание.</li>
+          <li class="how-it-works__item how-it-works__item--time">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="example">
+      <div class="example__wrapper">
+        <h2 class="example__title">Живой пример</h2>
+        <p class="example__text">
+          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+        </p>
+        <ul classs="example__data-list">
+          <li class="example__data-item indicator">
+            <p class="indicator__value">5 кг</p>
+            <p class="indicator__name">снижение веса</p>
+          </li>
+          <li class="example__data-item indicator">
+            <p class="indicator__value">60 дней</p>
+            <p class="indicator__name">затраты времени</p>
+          </li>
+        </ul>
+        <p class="example__cost">Затраты на питание: 15 000 руб.</p>
+        <div class="example__slider slider">
+          <div class="example__slider-view-before slider__view-before">
+            <img src="view-before.jpg" width="280" height="256" alt="Борис до замены корма на Cat Energy Slim">
+          </div>
+          <div class="example__slider-view-after slider__view-after">
+            <img src="view-after.jpg" width="280" height="256" alt="Борис после замены корма на Cat Energy Slim">
+          </div>
+          <div class="example__slider-dragme slider__dragme">
+            <button class="slider__dragme-button" type="button">
+              <span class="visually-hidden">Передвинуть слайдер</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer class="main-footer">
+    <section class="main-footer__contacts contacts">
+      <div class="contacts__wrapper">
+        <h2 class="visually-hidden">Контакты</h2>
+        <h3 class="contacts__text">Приглашаем к сотрудничеству дилеров!</h3>
+        <address class="contacts__address">
+          <p>ул. Большая Конюшенная, д. 19/8</p>
+          <p>Санкт-Петербург</p>
+        </address>
+      </div>
+    </section>
+    <section class="main-footer__location">
+      <h2 class="visually-hidden">Как нас найти</h2>
+      <img src="map.jpg" width="320" height="362" alt="Борис до замены корма на Cat Energy Slim">
+    </section>
+    <div class="main-footer__wrapper">
+      <section class="main-footer__logo logo">
+        <h2 class="visually-hidden">Логотип Cat Energy</h2>
+        <a class="main-footer__logo logo" href="#">
+          <img class="main-footer__logo-text logo__text" src="img/logotype-text.svg" width="101" height="18" alt="Текстовый логотип Cat Energy">
+        </a>
+      </section>
+      <section class="main-footer__social social">
+        <h2 class="visually-hidden">Мы в соцсетях</h2>
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">Мы в Ютубе</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">Мы в Телеграме</a>
+          </li>
+        </ul>
+      </section>
+      <section class="main-footer__copyright copyright">
+        <h2 class="visually-hidden">Логотип HTML Academy</h2>
+        <a class="copyright__link" href="https://htmlacademy.ru/">
+          <p class="copyright__text">HTML Academy</p>
+          <img class="copyright__logo" src="img/logo-html-academy.svg" width="27" height="34" alt="Логотип HTML Academy">
+        </a>
+      </section>
+    </div>
+  </footer>
+
+</body>
+
 </html>
