--- a/source/index.html
+++ b/source/index.html
@@ -45,7 +45,7 @@
         <h2 class="main-banner__title">Функциональное питание для котов</h2>
         <p class="main-banner__text">Занялись собой? Займитесь котом!</p>
         <img class="main-banner__img" src="images/index-can.svg" width="280" height="270" alt="Серия Cat Energy Pro">
-        <a class="main-banner__button button button--green" href="select-program.html" type="button">Подобрать программу</a>
+        <a class="main-banner__button button button--green" href="select-program.html">Подобрать программу</a>
       </div>
     </section>
 
@@ -89,7 +89,7 @@
         <p class="example__text">
           Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
         </p>
-        <ul classs="example__data-list">
+        <ul class="example__data-list">
           <li class="example__data-item indicator">
             <p class="indicator__value">5 кг</p>
             <p class="indicator__name">снижение веса</p>
