--- a/source/catalog.html
+++ b/source/catalog.html
@@ -44,11 +44,11 @@
         <h1 class="main-catalog__title">Каталог продукции</h1>
         <ul class="main-catalog__list">
           <li class="main-catalog__item catalog-card">
-            <a class="сatalog-card__link-img" href="cat-energy-pro-500-chicken.html">
+            <a class="main-catalog__link" href="cat-energy-pro-500-chicken.html">
               <img class="catalog-card__img" src="images/cat-energy-pro-500-chicken.png" width="68" height="86" alt="Cat Energy Pro 500 г со вкусом курицы">
             </a>
             <div class="catalog-card__content">
-              <a class="сatalog-card__link-title" href="cat-energy-pro-500-chicken.html">
+              <a class="main-catalog__link" href="cat-energy-pro-500-chicken.html">
                 <h2 class="catalog-card__title">Cat Energy PRO 500 г</h2>
               </a>
               <dl class="catalog-card__properties">
@@ -81,11 +81,11 @@
             <a class="catalog-card__button button button--green" href="order-cat-energy-pro-500-chicken.html">Заказать</a>
           </li>
           <li class="main-catalog__item catalog-card">
-            <a class="сatalog-card__link-img" href="cat-energy-pro-1000-chicken.html">
+            <a class="main-catalog__link" href="cat-energy-pro-1000-chicken.html">
               <img class="catalog-card__img" src="images/cat-energy-pro-1000-chicken.png" width="84" height="100" alt="Cat Energy Pro 1000 г со вкусом курицы">
             </a>
             <div class="catalog-card__content">
-              <a class="сatalog-card__link-title" href="cat-energy-pro-1000-chicken.html">
+              <a class="main-catalog__link" href="cat-energy-pro-1000-chicken.html">
                 <h2 class="catalog-card__title">Cat Energy PRO 1000 г</h2>
               </a>
               <dl class="catalog-card__properties">
@@ -118,11 +118,11 @@
             <a class="catalog-card__button button button--green" href="order-cat-energy-pro-1000-chicken.html">Заказать</a>
           </li>
           <li class="main-catalog__item catalog-card">
-            <a class="сatalog-card__link-img" href="cat-energy-pro-500-fish.html">
+            <a class="main-catalog__link" href="cat-energy-pro-500-fish.html">
               <img class="catalog-card__img" src="images/cat-energy-pro-500-fish.png" width="68" height="78" alt="Cat Energy Pro 500 г со вкусом рыбы">
             </a>
             <div class="catalog-card__content">
-              <a class="сatalog-card__link-title" href="cat-energy-pro-500-fish.html">
+              <a class="main-catalog__link" href="cat-energy-pro-500-fish.html">
                 <h2 class="catalog-card__title">Cat Energy PRO 500 г</h2>
               </a>
               <dl class="catalog-card__properties">
@@ -155,11 +155,11 @@
             <a class="catalog-card__button button button--green" href="order-cat-energy-pro-500-fish.html">Заказать</a>
           </li>
           <li class="main-catalog__item catalog-card">
-            <a class="сatalog-card__link-img" href="cat-energy-pro-1000-fish.html">
+            <a class="main-catalog__link" href="cat-energy-pro-1000-fish.html">
               <img class="catalog-card__img" src="images/cat-energy-pro-1000-fish.png" width="68" height="78" alt="Cat Energy Pro 1000 г со вкусом рыбы">
             </a>
             <div class="catalog-card__content">
-              <a class="сatalog-card__link-title" href="cat-energy-pro-1000-fish.html">
+              <a class="main-catalog__link" href="cat-energy-pro-1000-fish.html">
                 <h2 class="catalog-card__title">Cat Energy PRO 1000 г</h2>
               </a>
               <dl class="catalog-card__properties">
@@ -192,11 +192,11 @@
             <a class="catalog-card__button button button--green" href="order-cat-energy-pro-1000-fish.html">Заказать</a>
           </li>
           <li class="main-catalog__item catalog-card">
-            <a class="сatalog-card__link-img" href="cat-energy-slim-500-buckwheat.html">
+            <a class="main-catalog__link" href="cat-energy-slim-500-buckwheat.html">
               <img class="catalog-card__img" src="images/cat-energy-slim-500-buckwheat.png" width="68" height="78" alt="Cat Energy Slim 500 г со вкусом гречки">
             </a>
             <div class="catalog-card__content">
-              <a class="сatalog-card__link-title" href="cat-energy-slim-500-buckwheat.html">
+              <a class="main-catalog__link" href="cat-energy-slim-500-buckwheat.html">
                 <h2 class="catalog-card__title">Cat Energy SLIM 500 г</h2>
               </a>
               <dl class="catalog-card__properties">
@@ -229,11 +229,11 @@
             <a class="catalog-card__button button button--green" href="order-cat-energy-slim-500-buckwheat.html">Заказать</a>
           </li>
           <li class="main-catalog__item catalog-card">
-            <a class="сatalog-card__link-img" href="cat-energy-slim-1000-buckwheat.html">
+            <a class="main-catalog__link" href="cat-energy-slim-1000-buckwheat.html">
               <img class="catalog-card__img" src="images/cat-energy-slim-1000-buckwheat.png" width="84" height="100" alt="Cat Energy Slim 1000 г со вкусом гречки">
             </a>
             <div class="catalog-card__content">
-              <a class="сatalog-card__link-title" href="cat-energy-slim-1000-buckwheat.html">
+              <a class="main-catalog__link" href="cat-energy-slim-1000-buckwheat.html">
                 <h2 class="catalog-card__title">Cat Energy PRO 500 г</h2>
               </a>
               <dl class="catalog-card__properties">
@@ -266,11 +266,11 @@
             <a class="catalog-card__button button button--green" href="order-cat-energy-slim-1000-buckwheat.html">Заказать</a>
           </li>
           <li class="main-catalog__item catalog-card">
-            <a class="сatalog-card__link-img" href="cat-energy-slim-500-rice.html">
+            <a class="main-catalog__link" href="cat-energy-slim-500-rice.html">
               <img class="catalog-card__img" src="images/cat-energy-slim-500-rice.png" width="72" height="84" alt="Cat Energy Slim 500 г со вкусом риса">
             </a>
             <div class="catalog-card__content">
-              <a class="сatalog-card__link-title" href="cat-energy-slim-500-rice.html">
+              <a class="main-catalog__link" href="cat-energy-slim-500-rice.html">
                 <h2 class="catalog-card__title">Cat Energy Slim 500 г</h2>
               </a>
               <dl class="catalog-card__properties">
