--- a/source/catalog.html
+++ b/source/catalog.html
@@ -405,7 +405,7 @@
           <p>Санкт-Петербург</p>
         </address>
       </div>
-      <img class="contacts__map" src="map.jpg" width="100%" height="362" alt="Месторасположение магазина">
+      <img class="contacts__map" src="map.jpg" width="320" height="362" alt="Месторасположение магазина">
     </div>
     <div class="main-footer__wrapper">
       <a class="main-footer__logo logo" href="#">
