Создает базовую стилизацию

--- a/source/index.html
+++ b/source/index.html
@@ -48,7 +48,7 @@
     <section class="main-banner">
       <div class="main-banner__wrapper">
         <h2 class="main-banner__title">Функциональное питание для котов</h2>
-        <p class="main-banner__text">Занялись собой? Займитесь котом!</p>
+        <p class="main-banner__text">Занялся собой? Займись котом!</p>
         <picture>
           <source type="image/png" media="(min-width: 1440px)" srcset="images/index-can-desktop@1x.png 1x, images/index-can-desktop@2x.png 2x" width="552" height="499">
           <source type="image/png" media="(min-width: 768px)" srcset="images/index-can-tablet@1x.png 1x, images/index-can-tablet@2x.png 2x" width="709" height="609">
