--- a/source/catalog.html
+++ b/source/catalog.html
@@ -442,7 +442,7 @@
     </div>
     <div class="main-footer__wrapper">
       <a class="main-footer__logo logo" href="#">
-        <img class="logo__text" src="img/logotype-text.svg" width="101" height="18" alt="Логотип Cat Energy">
+        <img class="logo__text" src="images/logotype-text.svg" width="101" height="18" alt="Логотип Cat Energy">
       </a>
       <div class="main-footer__social social">
         <h2 class="visually-hidden">Мы в соцсетях</h2>
