--- a/source/index.html
+++ b/source/index.html
@@ -121,11 +121,9 @@
             <source type="image/png" media="(min-width: 768px)" srcset="images/view-after-tablet@1x.png 1x, images/view-after-tablet@2x.png 2x" width="560" height="512">
             <img class="slider__img slider__img--after" src="images/view-after-mobile@1x.png" srcset="images/view-after-mobile@2x.png 2x" width="280" height="256" alt="Борис после замены корма на Cat Energy Slim">
           </picture>
-          <div class="example__slider-dragme slider__dragme">
-            <button class="slider__dragme-button" type="button">
-              <span class="visually-hidden">Передвинуть слайдер</span>
-            </button>
-          </div>
+          <button class="slider__button" type="button">
+            <span class="visually-hidden">Передвинуть слайдер</span>
+          </button>
         </div>
       </div>
     </section>
