Добавляет максимальную ширину страниц

--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="page__body">
-  <header class="page__header page__header--with-banner main-header">
+  <header class="page__header main-header">
     <div class="main-header__wrapper">
       <a class="main-header__logo logo" href="#">
         <span class="visually-hidden">Логотип</span>
@@ -25,7 +25,7 @@
         </picture>
         <img class="logo__text" src="images/logotype-text.svg" width="101" height="18" alt="Логотип Cat Energy">
       </a>
-      <button class="main-header__toggle main-header__toggle--active" type="button">
+      <button class="main-header__toggle main-header__toggle--no-js" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
     </div>
