--- a/source/index.html
+++ b/source/index.html
@@ -13,8 +13,8 @@
   <script src="scripts/index.js" defer></script>
 </head>
 
-<body class="page__body">
-  <header class="page__header main-header">
+<body class="page__body page__body--index">
+  <header class="page__header page__header--index main-header">
     <div class="main-header__wrapper">
       <a class="main-header__logo logo" href="#">
         <span class="visually-hidden">Логотип</span>
@@ -25,12 +25,13 @@
         </picture>
         <img class="logo__text" src="images/logotype-text.svg" width="101" height="18" alt="Логотип Cat Energy">
       </a>
-      <button class="main-header__toggle main-header__toggle--no-js" type="button">
+
+    </div>
+    <nav class="main-nav main-nav--nojs">
+      <button class="main-nav__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
-    </div>
-    <nav class="main-nav">
-      <ul class="main-nav__list main-nav__list--active">
+      <ul class="main-nav__list">
         <li class="main-nav__item">
           <a class="main-nav__link main-nav__link--light main-nav__link--active" href="#">Главная</a>
         </li>
@@ -52,13 +53,15 @@
         <h2 class="main-banner__title">Функциональное питание для котов</h2>
         <p class="main-banner__text">Занялся собой? Займись котом!</p>
         <a class="main-banner__button button button--main" href="select-program.html">Подобрать программу</a>
+      </div>
+      <div class="main-banner__img-wrapper">
         <picture>
           <source type="image/png" media="(min-width: 1440px)" srcset="images/index-can-desktop@1x.png 1x, images/index-can-desktop@2x.png 2x" width="552" height="499">
           <source type="image/png" media="(min-width: 768px)" srcset="images/index-can-tablet@1x.png 1x, images/index-can-tablet@2x.png 2x" width="709" height="609">
           <img class="main-banner__img" src="images/index-can-mobile@1x.png" srcset="images/index-can-mobile@2x.png 2x" width="280" height="270" alt="Серия Cat Energy Pro">
         </picture>
-
       </div>
+
     </section>
     <section class="programs">
       <div class="programs__wrapper">
@@ -89,33 +92,36 @@
           <li class="how-it-works__item how-it-works__item--nutrients">Функциональное питание содержит только полезные питательные вещества.</li>
           <li class="how-it-works__item how-it-works__item--substance">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
           <li class="how-it-works__item how-it-works__item--exchange">Замените один-два приема обычной еды на наше функциональное питание.</li>
-          <li class="how-it-works__item how-it-works__item--time">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+          <li class="how-it-works__item how-it-works__item--time">Уже через месяц наслаждайтесь изменениями к лучшему&nbsp; вашего питомца!</li>
         </ul>
       </div>
     </section>
 
     <section class="example">
       <div class="example__wrapper">
-        <h2 class="example__title">Живой пример</h2>
-        <p class="example__text">
-          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-        </p>
-        <div class="example__data-wrapper">
-          <ul class="example__data-list">
-            <li class="example__data-item indicator">
-              <p class="indicator__value">5 кг</p>
-              <p class="indicator__name">снижение <br>веса</p>
-            </li>
-            <li class="example__data-item indicator">
-              <p class="indicator__value">60 дней</p>
-              <p class="indicator__name">затрачено времени</p>
-            </li>
-          </ul>
-          <p class="example__cost">
-            <span class="example__cost-name">Затраты на питание:</span>
-            <span class="example__cost-value">15 000 руб.</span>
+        <div class="example__wrapper-text">
+          <h2 class="example__title">Живой пример</h2>
+          <p class="example__text">
+            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат&nbsp;&nbsp; без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
           </p>
+          <div class="example__data-wrapper">
+            <ul class="example__data-list">
+              <li class="example__data-item indicator">
+                <p class="indicator__value">5 кг</p>
+                <p class="indicator__name">снижение веса</p>
+              </li>
+              <li class="example__data-item indicator">
+                <p class="indicator__value">60 дней</p>
+                <p class="indicator__name">затрачено времени</p>
+              </li>
+            </ul>
+            <p class="example__cost">
+              <span class="example__cost-name">Затраты на питание:</span>
+              <span class="example__cost-value">15 000 руб.</span>
+            </p>
+          </div>
         </div>
+
         <div class="example__slider slider">
           <picture>
             <source type="image/png" media="(min-width: 768px)" srcset="images/view-before-tablet@1x.png 1x, images/view-before-tablet@2x.png 2x" width="560" height="512">
@@ -130,6 +136,7 @@
           </button>
         </div>
       </div>
+
     </section>
   </main>
 
@@ -143,6 +150,7 @@
           <p>Санкт-Петербург</p>
         </address>
       </div>
+      <iframe class="contacts__yandex-map" src="https://yandex.ru/map-widget/v1/?um=constructor%3Afca79d4734dc1254cdd9b719ae19dcb95488b27becfcb7ec7d98cb7480965816&amp;source=constructor" width="100%" height="400" frameborder="0"></iframe>
       <picture>
         <source type="image/jpeg" media="(min-width: 1440px)" srcset="images/map-desktop@1x.jpg 1x, images/map-desktop@2x.jpg 2x" width="1440" height="400">
         <source type="image/jpeg" media="(min-width: 768px)" srcset="images/map-tablet@1x.jpg 1x, images/map-tablet@2x.jpg 2x" width="768" height="400">
