Стилизует декоративные элементы

--- a/source/index.html
+++ b/source/index.html
@@ -146,8 +146,8 @@
         <h2 class="visually-hidden">Контакты</h2>
         <h3 class="contacts__text">Приглашаем <br>к сотрудничеству <br>дилеров!</h3>
         <address class="contacts__address">
-          <p>ул. Большая Конюшенная, д. 19/8</p>
-          <p>Санкт-Петербург</p>
+          <p class="contacts__street">ул. Большая Конюшенная, д. 19/8</p>
+          <p class="contacts__city">Санкт-Петербург</p>
         </address>
       </div>
       <iframe class="contacts__yandex-map" src="https://yandex.ru/map-widget/v1/?um=constructor%3Afca79d4734dc1254cdd9b719ae19dcb95488b27becfcb7ec7d98cb7480965816&amp;source=constructor" width="1220" height="400"></iframe>
