--- a/source/index.html
+++ b/source/index.html
@@ -48,20 +48,18 @@
   <main class="main-container">
     <h1 class="visually-hidden">Cat Energy - функциональное питание для котов</h1>
 
-    <section class="main-container__banner main-banner">
+    <section class="main-banner">
       <div class="main-banner__wrapper">
         <h2 class="main-banner__title">Функциональное питание для котов</h2>
         <p class="main-banner__text">Занялся собой? Займись котом!</p>
-        <a class="main-banner__button button button--main" href="select-program.html">Подобрать программу</a>
-      </div>
-      <div class="main-banner__img-wrapper">
+
         <picture>
           <source type="image/png" media="(min-width: 1440px)" srcset="images/index-can-desktop@1x.png 1x, images/index-can-desktop@2x.png 2x" width="552" height="499">
           <source type="image/png" media="(min-width: 768px)" srcset="images/index-can-tablet@1x.png 1x, images/index-can-tablet@2x.png 2x" width="709" height="609">
           <img class="main-banner__img" src="images/index-can-mobile@1x.png" srcset="images/index-can-mobile@2x.png 2x" width="280" height="270" alt="Серия Cat Energy Pro">
         </picture>
+        <a class="main-banner__button button button--main" href="select-program.html">Подобрать программу</a>
       </div>
-
     </section>
     <section class="programs">
       <div class="programs__wrapper">
@@ -102,7 +100,7 @@
         <div class="example__wrapper-text">
           <h2 class="example__title">Живой пример</h2>
           <p class="example__text">
-            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат&nbsp;&nbsp; без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
           </p>
           <div class="example__data-wrapper">
             <ul class="example__data-list">
@@ -146,7 +144,7 @@
         <h2 class="visually-hidden">Контакты</h2>
         <h3 class="contacts__text">Приглашаем <br>к сотрудничеству <br>дилеров!</h3>
         <address class="contacts__address">
-          <p class="contacts__street">ул. Большая Конюшенная, д. 19/8</p>
+          <p class="contacts__street">ул. Большая <br>Конюшенная, д. 19/8</p>
           <p class="contacts__city">Санкт-Петербург</p>
         </address>
       </div>
