--- a/source/catalog.html
+++ b/source/catalog.html
@@ -373,7 +373,7 @@
               <dl class="second-catalog-card__offers">
                 <div class="second-catalog-card__offer">
                   <dt class="second-catalog-card__offer-name">
-                    5 литров
+                    5 литров &nbsp;
                   </dt>
                   <dd class="second-catalog-card__offer-cost">
                     50 ₽
@@ -427,7 +427,7 @@
         <p class="promotions__text">Подпишитесь на наши новости и не пропустите ни одного предложения!</p>
         <form class="promotions__form subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
           <label class="visually-hidden" for="subscribe-form-input">Введите свой e-mail</label>
-          <input class="subscribe-form__email" id="subscribe-form-input" name="email" type="email" placeholder="kuklachev@gmail.com">
+          <input class="subscribe-form__email" id="subscribe-form-input" name="email" type="email" placeholder="kuklachev@gmail.com" required>
           <button class="subscribe-form__button button button--main" type="submit">Подписаться</button>
         </form>
       </div>
@@ -438,18 +438,20 @@
     <div class="main-footer__contacts contacts contacts--catalog">
       <div class="contacts__wrapper">
         <h2 class="visually-hidden">Контакты</h2>
-        <h3 class="contacts__text">Приглашаем <br>к сотрудничеству дилеров!</h3>
+        <h3 class="contacts__text">Приглашаем <br>к сотрудничеству <br>дилеров!</h3>
         <address class="contacts__address">
-          <p class="contacts__street">ул. Большая Конюшенная, д. 19/8</p>
+          <p class="contacts__street">ул. Большая <br>Конюшенная, д. 19/8</p>
           <p class="contacts__city">Санкт-Петербург</p>
         </address>
       </div>
-      <iframe class="contacts__yandex-map" src="https://yandex.ru/map-widget/v1/?um=constructor%3Afca79d4734dc1254cdd9b719ae19dcb95488b27becfcb7ec7d98cb7480965816&amp;source=constructor" width="1220" height="400"></iframe>
-      <picture>
-        <source type="image/jpeg" media="(min-width: 1440px)" srcset="images/map-desktop@1x.jpg 1x, images/map-desktop@2x.jpg 2x" width="1440" height="400">
-        <source type="image/jpeg" media="(min-width: 768px)" srcset="images/map-tablet@1x.jpg 1x, images/map-tablet@2x.jpg 2x" width="768" height="400">
-        <img class="contacts__map" src="images/map-mobile@1x.jpg" srcset="images/map-mobile@2x.jpg 2x" width="320" height="362" alt="Месторасположение магазина">
-      </picture>
+      <div class="contacts__map-wrapper contacts__map-wrapper--nojs">
+        <iframe class="contacts__yandex-map" src="https://yandex.ru/map-widget/v1/?um=constructor%3Afca79d4734dc1254cdd9b719ae19dcb95488b27becfcb7ec7d98cb7480965816&amp;source=constructor" width="1220" height="400"></iframe>
+        <picture>
+          <source type="image/jpeg" media="(min-width: 1440px)" srcset="images/map-desktop@1x.jpg 1x, images/map-desktop@2x.jpg 2x" width="1440" height="400">
+          <source type="image/jpeg" media="(min-width: 768px)" srcset="images/map-tablet@1x.jpg 1x, images/map-tablet@2x.jpg 2x" width="768" height="400">
+          <img class="contacts__map" src="images/map-mobile@1x.jpg" srcset="images/map-mobile@2x.jpg 2x" width="320" height="362" alt="Месторасположение магазина">
+        </picture>
+      </div>
     </div>
     <div class="main-footer__wrapper">
       <a class="main-footer__logo logo" href="#">
