--- a/source/catalog.html
+++ b/source/catalog.html
@@ -55,6 +55,9 @@
           <li class="main-catalog__item catalog-card">
             <a class="catalog-card__link" href="cat-energy-pro-500-chicken.html">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="images/cat-energy-pro-500-chicken-desktop@1x.webp 1x, images/cat-energy-pro-500-chicken-desktop@2x.webp 2x" width="169" height="210">
+                <source type="image/webp" media="(min-width: 768px)" srcset="images/cat-energy-pro-500-chicken-tablet@1x.webp 1x, images/cat-energy-pro-500-chicken-tablet@2x.webp 2x" width="200" height="210">
+                <source type="image/webp" srcset="images/cat-energy-pro-500-chicken-mobile@1x.webp 1x, images/cat-energy-pro-500-chicken-mobile@2x.webp 2x" width="140" height="107">
                 <source type="image/png" media="(min-width: 1440px)" srcset="images/cat-energy-pro-500-chicken-desktop@1x.png 1x, images/cat-energy-pro-500-chicken-desktop@2x.png 2x" width="169" height="210">
                 <source type="image/png" media="(min-width: 768px)" srcset="images/cat-energy-pro-500-chicken-tablet@1x.png 1x, images/cat-energy-pro-500-chicken-tablet@2x.png 2x" width="200" height="210">
                 <img class="catalog-card__img" src="images/cat-energy-pro-500-chicken-mobile@1x.png" srcset="images/cat-energy-pro-500-chicken-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy Pro 500 г со вкусом курицы">
@@ -96,6 +99,9 @@
           <li class="main-catalog__item catalog-card">
             <a class="catalog-card__link" href="cat-energy-pro-1000-chicken.html">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="images/cat-energy-pro-1000-chicken-desktop@1x.webp 1x, images/cat-energy-pro-1000-chicken-desktop@2x.webp 2x" width="169" height="210">
+                <source type="image/webp" media="(min-width: 768px)" srcset="images/cat-energy-pro-1000-chicken-tablet@1x.webp 1x, images/cat-energy-pro-1000-chicken-tablet@2x.webp 2x" width="200" height="210">
+                <source type="image/webp" srcset="images/cat-energy-pro-1000-chicken-mobile@1x.webp 1x, images/cat-energy-pro-1000-chicken-mobile@2x.webp 2x" width="140" height="107">
                 <source type="image/png" media="(min-width: 1440px)" srcset="images/cat-energy-pro-1000-chicken-desktop@1x.png 1x, images/cat-energy-pro-1000-chicken-desktop@2x.png 2x" width="169" height="210">
                 <source type="image/png" media="(min-width: 768px)" srcset="images/cat-energy-pro-1000-chicken-tablet@1x.png 1x, images/cat-energy-pro-1000-chicken-tablet@2x.png 2x" width="200" height="210">
                 <img class="catalog-card__img" src="images/cat-energy-pro-1000-chicken-mobile@1x.png" srcset="images/cat-energy-pro-1000-chicken-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy Pro 1000 г со вкусом курицы">
@@ -137,6 +143,9 @@
           <li class="main-catalog__item catalog-card">
             <a class="catalog-card__link" href="cat-energy-pro-500-fish.html">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="images/cat-energy-pro-500-fish-desktop@1x.webp 1x, images/cat-energy-pro-500-fish-desktop@2x.webp 2x" width="169" height="210">
+                <source type="image/webp" media="(min-width: 768px)" srcset="images/cat-energy-pro-500-fish-tablet@1x.webp 1x, images/cat-energy-pro-500-fish-tablet@2x.webp 2x" width="200" height="210">
+                <source type="image/webp" srcset="images/cat-energy-pro-500-fish-mobile@1x.webp 1x, images/cat-energy-pro-500-fish-mobile@2x.webp 2x" width="140" height="107">
                 <source type="image/png" media="(min-width: 1440px)" srcset="images/cat-energy-pro-500-fish-desktop@1x.png 1x, images/cat-energy-pro-500-fish-desktop@2x.png 2x" width="169" height="210">
                 <source type="image/png" media="(min-width: 768px)" srcset="images/cat-energy-pro-500-fish-tablet@1x.png 1x, images/cat-energy-pro-500-fish-tablet@2x.png 2x" width="200" height="210">
                 <img class="catalog-card__img" src="images/cat-energy-pro-500-fish-mobile@1x.png" srcset="images/cat-energy-pro-500-fish-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy Pro 500 г со вкусом рыбы">
@@ -178,6 +187,9 @@
           <li class="main-catalog__item catalog-card">
             <a class="catalog-card__link" href="cat-energy-pro-1000-fish.html">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="images/cat-energy-pro-1000-fish-desktop@1x.webp 1x, images/cat-energy-pro-1000-fish-desktop@2x.webp 2x" width="169" height="210">
+                <source type="image/webp" media="(min-width: 768px)" srcset="images/cat-energy-pro-1000-fish-tablet@1x.webp 1x, images/cat-energy-pro-1000-fish-tablet@2x.webp 2x" width="200" height="210">
+                <source type="image/webp" srcset="images/cat-energy-pro-1000-fish-mobile@1x.webp 1x, images/cat-energy-pro-1000-fish-mobile@2x.webp 2x" width="140" height="107">
                 <source type="image/png" media="(min-width: 1440px)" srcset="images/cat-energy-pro-1000-fish-desktop@1x.png 1x, images/cat-energy-pro-1000-fish-desktop@2x.png 2x" width="169" height="210">
                 <source type="image/png" media="(min-width: 768px)" srcset="images/cat-energy-pro-1000-fish-tablet@1x.png 1x, images/cat-energy-pro-1000-fish-tablet@2x.png 2x" width="200" height="210">
                 <img class="catalog-card__img" src="images/cat-energy-pro-1000-fish-mobile@1x.png" srcset="images/cat-energy-pro-1000-fish-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy Pro 1000 г со вкусом рыбы">
@@ -219,6 +231,9 @@
           <li class="main-catalog__item catalog-card">
             <a class="catalog-card__link" href="cat-energy-slim-500-buckwheat.html">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="images/cat-energy-slim-500-buckwheat-desktop@1x.webp 1x, images/cat-energy-slim-500-buckwheat-desktop@2x.webp 2x" width="169" height="210">
+                <source type="image/webp" media="(min-width: 768px)" srcset="images/cat-energy-slim-500-buckwheat-tablet@1x.webp 1x, images/cat-energy-slim-500-buckwheat-tablet@2x.webp 2x" width="200" height="210">
+                <source type="image/webp" srcset="images/cat-energy-slim-500-buckwheat-mobile@1x.webp 1x, images/cat-energy-slim-500-buckwheat-mobile@2x.webp 2x" width="140" height="107">
                 <source type="image/png" media="(min-width: 1440px)" srcset="images/cat-energy-slim-500-buckwheat-desktop@1x.png 1x, images/cat-energy-slim-500-buckwheat-desktop@2x.png 2x" width="169" height="210">
                 <source type="image/png" media="(min-width: 768px)" srcset="images/cat-energy-slim-500-buckwheat-tablet@1x.png 1x, images/cat-energy-slim-500-buckwheat-tablet@2x.png 2x" width="200" height="210">
                 <img class="catalog-card__img" src="images/cat-energy-slim-500-buckwheat-mobile@1x.png" srcset="images/cat-energy-slim-500-buckwheat-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy Slim 500 г со вкусом гречки">
@@ -260,6 +275,9 @@
           <li class="main-catalog__item catalog-card">
             <a class="catalog-card__link" href="cat-energy-slim-1000-buckwheat.html">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="images/cat-energy-slim-1000-buckwheat-desktop@1x.webp 1x, images/cat-energy-slim-1000-buckwheat-desktop@2x.webp 2x" width="169" height="210">
+                <source type="image/webp" media="(min-width: 768px)" srcset="images/cat-energy-slim-1000-buckwheat-tablet@1x.webp 1x, images/cat-energy-slim-1000-buckwheat-tablet@2x.webp 2x" width="200" height="210">
+                <source type="image/webp" srcset="images/cat-energy-slim-1000-buckwheat-mobile@1x.webp 1x, images/cat-energy-slim-1000-buckwheat-mobile@2x.webp 2x" width="140" height="107">
                 <source type="image/png" media="(min-width: 1440px)" srcset="images/cat-energy-slim-1000-buckwheat-desktop@1x.png 1x, images/cat-energy-slim-1000-buckwheat-desktop@2x.png 2x" width="169" height="210">
                 <source type="image/png" media="(min-width: 768px)" srcset="images/cat-energy-slim-1000-buckwheat-tablet@1x.png 1x, images/cat-energy-slim-1000-buckwheat-tablet@2x.png 2x" width="200" height="210">
                 <img class="catalog-card__img" src="images/cat-energy-slim-1000-buckwheat-mobile@1x.png" srcset="images/cat-energy-slim-1000-buckwheat-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy Slim 1000 г со вкусом гречки">
@@ -301,6 +319,9 @@
           <li class="main-catalog__item catalog-card">
             <a class="catalog-card__link" href="cat-energy-slim-500-rice.html">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="images/cat-energy-slim-500-rice-desktop@1x.webp 1x, images/cat-energy-slim-500-rice-desktop@2x.webp 2x" width="169" height="210">
+                <source type="image/webp" media="(min-width: 768px)" srcset="images/cat-energy-slim-500-rice-tablet@1x.webp 1x, images/cat-energy-slim-500-rice-tablet@2x.webp 2x" width="200" height="210">
+                <source type="image/webp" srcset="images/cat-energy-slim-500-rice-mobile@1x.webp 1x, images/cat-energy-slim-500-rice-mobile@2x.webp 2x" width="140" height="107">
                 <source type="image/png" media="(min-width: 1440px)" srcset="images/cat-energy-slim-500-rice-desktop@1x.png 1x, images/cat-energy-slim-500-rice-desktop@2x.png 2x" width="169" height="210">
                 <source type="image/png" media="(min-width: 768px)" srcset="images/cat-energy-slim-500-rice-tablet@1x.png 1x, images/cat-energy-slim-500-rice-tablet@2x.png 2x" width="200" height="210">
                 <img class="catalog-card__img" src="images/cat-energy-slim-500-rice-mobile@1x.png" srcset="images/cat-energy-slim-500-rice-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy Slim 500 г со вкусом риса">
@@ -449,6 +470,9 @@
       <div class="contacts__map-wrapper contacts__map-wrapper--nojs">
         <iframe class="contacts__yandex-map" src="https://yandex.ru/map-widget/v1/?um=constructor%3Afca79d4734dc1254cdd9b719ae19dcb95488b27becfcb7ec7d98cb7480965816&amp;source=constructor" width="1220" height="400"></iframe>
         <picture>
+          <source type="image/webp" media="(min-width: 1440px)" srcset="images/map-desktop@1x.webp 1x, images/map-desktop@2x.webp 2x" width="1440" height="400">
+          <source type="image/webp" media="(min-width: 768px)" srcset="images/map-tablet@1x.webp 1x, images/map-tablet@2x.webp 2x" width="768" height="400">
+          <source type="image/webp" srcset="images/map-mobile@1x.webp 1x, images/map-mobile@2x.webp 2x" width="320" height="362">
           <source type="image/jpeg" media="(min-width: 1440px)" srcset="images/map-desktop@1x.jpg 1x, images/map-desktop@2x.jpg 2x" width="1440" height="400">
           <source type="image/jpeg" media="(min-width: 768px)" srcset="images/map-tablet@1x.jpg 1x, images/map-tablet@2x.jpg 2x" width="768" height="400">
           <img class="contacts__map" src="images/map-mobile@1x.jpg" srcset="images/map-mobile@2x.jpg 2x" width="320" height="362" alt="Месторасположение магазина">
