--- a/source/index.html
+++ b/source/index.html
@@ -54,8 +54,10 @@
       <div class="main-banner__wrapper">
         <h2 class="main-banner__title">Функциональное питание для котов</h2>
         <p class="main-banner__text">Занялся собой? Займись котом!</p>
-
         <picture>
+          <source type="image/webp" media="(min-width: 1440px)" srcset="images/index-can-desktop@1x.webp 1x, images/index-can-desktop@2x.webp 2x" width="552" height="499">
+          <source type="image/webp" media="(min-width: 768px)" srcset="images/index-can-tablet@1x.webp 1x, images/index-can-tablet@2x.webp 2x" width="709" height="609">
+          <source type="image/webp" srcset="images/index-can-mobile@1x.webp 1x, images/index-can-mobile@2x.webp 2x" width="280" height="270">
           <source type="image/png" media="(min-width: 1440px)" srcset="images/index-can-desktop@1x.png 1x, images/index-can-desktop@2x.png 2x" width="552" height="499">
           <source type="image/png" media="(min-width: 768px)" srcset="images/index-can-tablet@1x.png 1x, images/index-can-tablet@2x.png 2x" width="709" height="609">
           <img class="main-banner__img" src="images/index-can-mobile@1x.png" srcset="images/index-can-mobile@2x.png 2x" width="280" height="270" alt="Серия Cat Energy Pro">
@@ -124,10 +126,14 @@
 
         <div class="example__slider slider">
           <picture>
+            <source type="image/webp" media="(min-width: 768px)" srcset="images/view-before-tablet@1x.webp 1x, images/view-before-tablet@2x.webp 2x" width="560" height="512">
+            <source type="image/webp" srcset="images/view-before-mobile@1x.webp 1x, images/view-before-mobile@2x.webp 2x" width="280" height="256">
             <source type="image/png" media="(min-width: 768px)" srcset="images/view-before-tablet@1x.png 1x, images/view-before-tablet@2x.png 2x" width="560" height="512">
             <img class="slider__img slider__img--before" src="images/view-before-mobile@1x.png" srcset="images/view-before-mobile@2x.png 2x" width="280" height="256" alt="Борис до замены корма на Cat Energy Slim">
           </picture>
           <picture>
+            <source type="image/webp" media="(min-width: 768px)" srcset="images/view-after-tablet@1x.webp 1x, images/view-after-tablet@2x.webp 2x" width="560" height="512">
+            <source type="image/webp" srcset="images/view-after-mobile@1x.webp 1x, images/view-after-mobile@2x.webp 2x" width="280" height="256">
             <source type="image/png" media="(min-width: 768px)" srcset="images/view-after-tablet@1x.png 1x, images/view-after-tablet@2x.png 2x" width="560" height="512">
             <img class="slider__img slider__img--after" src="images/view-after-mobile@1x.png" srcset="images/view-after-mobile@2x.png 2x" width="280" height="256" alt="Борис после замены корма на Cat Energy Slim">
           </picture>
@@ -153,6 +159,9 @@
       <div class="contacts__map-wrapper contacts__map-wrapper--nojs">
         <iframe class="contacts__yandex-map" src="https://yandex.ru/map-widget/v1/?um=constructor%3Afca79d4734dc1254cdd9b719ae19dcb95488b27becfcb7ec7d98cb7480965816&amp;source=constructor" width="1220" height="400"></iframe>
         <picture>
+          <source type="image/webp" media="(min-width: 1440px)" srcset="images/map-desktop@1x.webp 1x, images/map-desktop@2x.webp 2x" width="1440" height="400">
+          <source type="image/webp" media="(min-width: 768px)" srcset="images/map-tablet@1x.webp 1x, images/map-tablet@2x.webp 2x" width="768" height="400">
+          <source type="image/webp" srcset="images/map-mobile@1x.webp 1x, images/map-mobile@2x.webp 2x" width="320" height="362">
           <source type="image/jpeg" media="(min-width: 1440px)" srcset="images/map-desktop@1x.jpg 1x, images/map-desktop@2x.jpg 2x" width="1440" height="400">
           <source type="image/jpeg" media="(min-width: 768px)" srcset="images/map-tablet@1x.jpg 1x, images/map-tablet@2x.jpg 2x" width="768" height="400">
           <img class="contacts__map" src="images/map-mobile@1x.jpg" srcset="images/map-mobile@2x.jpg 2x" width="320" height="362" alt="Месторасположение магазина">
