--- a/source/catalog.html
+++ b/source/catalog.html
@@ -48,7 +48,7 @@
   </header>
 
   <main class="main-container">
-    <section class="main-catalog">
+    <section class="main-catalog" data-test="catalog">
       <div class="main-catalog__wrapper">
         <h1 class="main-catalog__title">Каталог продукции</h1>
         <ul class="main-catalog__list">
@@ -368,7 +368,7 @@
         </ul>
       </div>
     </section>
-    <section class="second-catalog">
+    <section class="second-catalog" data-test="additional">
       <div class="second-catalog__wrapper">
         <h2 class="second-catalog__title">Дополнительные товары</h2>
         <div class="second-catalog__list-wrapper">
@@ -468,7 +468,7 @@
         </address>
       </div>
       <div class="contacts__map-wrapper contacts__map-wrapper--nojs">
-        <iframe class="contacts__yandex-map" src="https://yandex.ru/map-widget/v1/?um=constructor%3Afca79d4734dc1254cdd9b719ae19dcb95488b27becfcb7ec7d98cb7480965816&amp;source=constructor" width="1220" height="400"></iframe>
+        <iframe class="contacts__yandex-map" src="https://yandex.ru/map-widget/v1/?um=constructor%3Afca79d4734dc1254cdd9b719ae19dcb95488b27becfcb7ec7d98cb7480965816&amp;source=constructor" width="1220" height="400" title="Месторасположение магазина"></iframe>
         <picture>
           <source type="image/webp" media="(min-width: 1440px)" srcset="images/map-desktop@1x.webp 1x, images/map-desktop@2x.webp 2x" width="1440" height="400">
           <source type="image/webp" media="(min-width: 768px)" srcset="images/map-tablet@1x.webp 1x, images/map-tablet@2x.webp 2x" width="768" height="400">
