--- a/source/index.html
+++ b/source/index.html
@@ -10,13 +10,13 @@
   <link rel="apple-touch-icon" href="favicons/apple.png">
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="styles/styles.css">
-  <link rel="preload" href="../../fonts/lato/Lato-Regular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
-  <link rel="preload" href="../../fonts/oswald/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/lato/Lato-Regular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/oswald/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
   <script src="scripts/index.js" defer></script>
 </head>
 
 <body class="page__body page__body--index">
-  <header class="page__header page__header--index main-header">
+  <header class="page__header page__header--index main-header" data-test="header">
     <div class="main-header__wrapper">
       <a class="main-header__logo logo" href="#">
         <span class="visually-hidden">Логотип</span>
@@ -50,7 +50,7 @@
   <main class="main-container">
     <h1 class="visually-hidden">Cat Energy - функциональное питание для котов</h1>
 
-    <section class="main-banner">
+    <section class="main-banner" data-test="hero">
       <div class="main-banner__wrapper">
         <h2 class="main-banner__title">Функциональное питание для котов</h2>
         <p class="main-banner__text">Занялся собой? Займись котом!</p>
@@ -65,7 +65,7 @@
         <a class="main-banner__button button button--main" href="select-program.html">Подобрать программу</a>
       </div>
     </section>
-    <section class="programs">
+    <section class="programs" data-test="programs">
       <div class="programs__wrapper">
         <h2 class="visually-hidden">Программы питания</h2>
         <ul class="programs__list">
@@ -87,7 +87,7 @@
       </div>
     </section>
 
-    <section class="how-it-works">
+    <section class="how-it-works" data-test="features">
       <div class="how-it-works__wrapper">
         <h2 class="how-it-works__title">Как это работает</h2>
         <ul class="how-it-works__list">
@@ -99,7 +99,7 @@
       </div>
     </section>
 
-    <section class="example">
+    <section class="example" data-test="proof">
       <div class="example__wrapper">
         <div class="example__wrapper-text">
           <h2 class="example__title">Живой пример</h2>
@@ -147,7 +147,7 @@
   </main>
 
   <footer class="main-footer">
-    <div class="main-footer__contacts contacts">
+    <div class="main-footer__contacts contacts" data-test="contacts">
       <div class="contacts__wrapper">
         <h2 class="visually-hidden">Контакты</h2>
         <h3 class="contacts__text">Приглашаем <br>к сотрудничеству <br>дилеров!</h3>
@@ -157,7 +157,7 @@
         </address>
       </div>
       <div class="contacts__map-wrapper contacts__map-wrapper--nojs">
-        <iframe class="contacts__yandex-map" src="https://yandex.ru/map-widget/v1/?um=constructor%3Afca79d4734dc1254cdd9b719ae19dcb95488b27becfcb7ec7d98cb7480965816&amp;source=constructor" width="1220" height="400"></iframe>
+        <iframe class="contacts__yandex-map" src="https://yandex.ru/map-widget/v1/?um=constructor%3Afca79d4734dc1254cdd9b719ae19dcb95488b27becfcb7ec7d98cb7480965816&amp;source=constructor" width="1220" height="400" title="Месторасположение магазина"></iframe>
         <picture>
           <source type="image/webp" media="(min-width: 1440px)" srcset="images/map-desktop@1x.webp 1x, images/map-desktop@2x.webp 2x" width="1440" height="400">
           <source type="image/webp" media="(min-width: 768px)" srcset="images/map-tablet@1x.webp 1x, images/map-tablet@2x.webp 2x" width="768" height="400">
@@ -168,7 +168,7 @@
         </picture>
       </div>
     </div>
-    <div class="main-footer__wrapper">
+    <div class="main-footer__wrapper" data-test="footer">
       <a class="main-footer__logo logo" href="#">
         <img class="logo__text" src="images/logotype-text.svg" width="128" height="24" alt="Логотип Cat Energy">
       </a>
